[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/first_person.gd" type="Script" id=1]
[ext_resource path="res://sprites/colored_tilemap_packed.png" type="Texture" id=2]
[ext_resource path="res://scripts/right_hand.gd" type="Script" id=3]
[ext_resource path="res://sprites/colored_tilemap_packed1.png" type="Texture" id=4]
[ext_resource path="res://scripts/left_hand.gd" type="Script" id=5]
[ext_resource path="res://scripts/opponent.gd" type="Script" id=6]

[sub_resource type="TileSet" id=1]
0/name = "colored_tilemap_packed.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 112, 88 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 8, 8 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 flash_color: hint_color = vec4(1.0);
uniform float flash_modifier: hint_range(0.0,1.0) = 1;
void fragment() {
	vec4 color = texture(TEXTURE,UV);
	color.rgb = mix(color.rgb,flash_color.rgb,flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/flash_color = Color( 0.988235, 0.968627, 0.988235, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float outline_width = 2.0;
uniform vec4 outline_color: hint_color;

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	vec2 ps = TEXTURE_PIXEL_SIZE;
	float a;
	float maxa = col.a;
	float mina = col.a;

	a = texture(TEXTURE, UV - vec2(0.0, -outline_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV - vec2(0.0, outline_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV - vec2(-outline_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV - vec2(outline_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	COLOR = mix(col, outline_color, (maxa - mina)*col.a);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/outline_width = 0.0
shader_param/outline_color = Color( 0.478431, 0.890196, 0.360784, 1 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 72, 48, 8, 8 )

[sub_resource type="Shader" id=7]
code = "
shader_type canvas_item;

uniform float outline_width = 2.0;
uniform vec4 outline_color: hint_color;

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	vec2 ps = TEXTURE_PIXEL_SIZE;
	float a;
	float maxa = col.a;
	float mina = col.a;

	a = texture(TEXTURE, UV - vec2(0.0, -outline_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV - vec2(0.0, outline_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV - vec2(-outline_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV - vec2(outline_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	COLOR = mix(col, outline_color, (maxa - mina)*col.a);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/outline_width = 0.0
shader_param/outline_color = Color( 0.478431, 0.890196, 0.360784, 1 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 48, 32, 8, 8 )

[node name="first_person" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 11.0
autostart = true

[node name="Control" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 480.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="Control"]
scale = Vector2( 7.5, 7.5 )
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 0, 393222, 1, 0, 393222, 2, 0, 393222, 3, 0, 393222, 4, 0, 458753, 5, 0, 458753, 6, 0, 458753, 7, 0, 458753, 65536, 0, 655362, 65537, 0, 655361, 65538, 0, 65537, 65539, 0, 655360, 65540, 0, 655362, 65541, 0, 655361, 65542, 0, 65537, 65543, 0, 655360, 131072, 0, 65537, 131073, 0, 262148, 131074, 0, 65537, 131075, 0, 262148, 131076, 0, 65537, 131077, 0, 262148, 131078, 0, 65537, 131079, 0, 262148, 196608, 0, 262148, 196609, 0, 65537, 196610, 0, 262148, 196611, 0, 65537, 196612, 0, 262148, 196613, 0, 65537, 196614, 0, 262148, 196615, 0, 65537, 262144, 0, 65537, 262145, 0, 262148, 262146, 0, 65537, 262147, 0, 262148, 262148, 0, 65537, 262149, 0, 262148, 262150, 0, 65537, 262151, 0, 262148, 327680, 0, 262148, 327681, 0, 65537, 327682, 0, 262148, 327683, 0, 65537, 327684, 0, 262148, 327685, 0, 65537, 327686, 0, 262148, 327687, 0, 65537, 393216, 0, 65537, 393217, 0, 262148, 393218, 0, 65537, 393219, 0, 262148, 393220, 0, 65537, 393221, 0, 262148, 393222, 0, 65537, 393223, 0, 262148, 458752, 0, 262148, 458753, 0, 65537, 458754, 0, 262148, 458755, 0, 65537, 458756, 0, 262148, 458757, 0, 65537, 458758, 0, 262148, 458759, 0, 65537 )

[node name="Tween2" type="Tween" parent="Control"]

[node name="Tween" type="Tween" parent="Control"]

[node name="Tween3" type="Tween" parent="Control"]

[node name="Tween4" type="Tween" parent="Control"]

[node name="Tween5" type="Tween" parent="Control"]

[node name="opponent" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opponent" type="TextureRect" parent="Control/opponent"]
material = SubResource( 3 )
margin_left = 165.857
margin_top = 129.0
margin_right = 299.857
margin_bottom = 263.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control/opponent"]
wait_time = 5.5

[node name="left_hand" type="Control" parent="Control"]
margin_left = -3.0
margin_top = 221.0
margin_right = 217.0
margin_bottom = 521.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lh_TextureRect" type="TextureRect" parent="Control/left_hand"]
material = SubResource( 5 )
anchor_top = 5.08626e-08
anchor_bottom = 1.01725e-07
margin_left = 16.4472
margin_top = 164.341
margin_right = 227.447
margin_bottom = 382.342
rect_rotation = 11.6396
mouse_filter = 2
texture = SubResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_hand" type="Control" parent="Control"]
margin_left = 242.122
margin_top = -15.0818
margin_right = 487.122
margin_bottom = 489.918
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rh_TextureRect" type="TextureRect" parent="Control/right_hand"]
material = SubResource( 8 )
margin_left = 33.7347
margin_top = 480.975
margin_right = 224.735
margin_bottom = 671.975
rect_rotation = -58.3656
mouse_filter = 2
texture = SubResource( 9 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="drop_the_action" from="." to="Control/opponent" method="_on_first_person_drop_the_action"]
[connection signal="drop_the_action" from="." to="Control/right_hand" method="_on_first_person_drop_the_action"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="tween_all_completed" from="Control/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Control/Tween4" to="Control/opponent" method="_on_Tween4_tween_completed"]
[connection signal="opponent_attack" from="Control/opponent" to="." method="_on_opponent_opponent_attack"]
[connection signal="timeout" from="Control/opponent/Timer" to="Control/opponent" method="_on_Timer_timeout"]
[connection signal="shield_up" from="Control/left_hand" to="." method="_on_left_hand_shield_up"]
[connection signal="opponent_hited" from="Control/right_hand" to="." method="_on_right_hand_opponent_hited"]
